Ultima Aula Modulo 4

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -88,15 +88,17 @@ div.campo > span {
 div.campo > input {
     background-color: #94cfcd;
     font-size: 1em;
-    width: calc(100% -44px);
+    width: calc(100% - 44px);
     height: 100%;
-    transform: translateY(-13px);
+    transform: translateY(-12px);
     border: 0px;
     border-radius: 8px;
+    padding: 4px;
 }
 
 div.campo > input:focus-within {
     background-color: white;
+    border: none;
     
 }
 
